# matrix-bot

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
example/src/plugins/: uuid.rs
src/: bin.rs  bot.rs  config.rs  handler.rs  lib.rs
src/apps/: uuid.rs
tests/: lib.rs
