[package]
name = "matrix-bot"
description = "A skeleton bot framework for the Matrix protocol."
version = "0.1.0"
authors = ["Andrew Halberstadt <ahal@pm.me>"]
edition = "2018"
license = "MPL-2.0"

[lib]
path = "src/bot.rs"

[dependencies]
directories = "^3.0.2"
dirs = "^3.0.1"
matrix-sdk = {"git" = "https://github.com/matrix-org/matrix-rust-sdk", "rev" = "ab180362c931606385dd53b73620d82ef2c3166d", features = ["encryption", "sled_cryptostore"]}
serde = {"version" = "^1.0.0", features = ["derive"]}
tokio = {"version" = "^1.5.0", features = ["time"], "default-features" = false}
toml = "^0.5.0"
url = "^2.2.1"

[dev-dependencies]
matrix-sdk-test = {"git" = "https://github.com/matrix-org/matrix-rust-sdk", "rev" = "ab180362c931606385dd53b73620d82ef2c3166d"}
mockito = "^0.30.0"
serde_json = "^1.0.59"
tempfile = "^3.2.0"
tokio = {"version" = "^1.5.0", features = ["rt-multi-thread", "macros", "time"]}
