[package]
name = "testbot"
version = "0.1.0"
authors = ["Andrew Halberstadt <ahal@pm.me>"]
edition = "2018"

[dependencies]
matrix-bot = { path = ".." }
matrix-sdk = "*"
tokio = {"version" = "^1.5.0", features = ["rt-multi-thread", "macros"]}
uuid = {"version" = "^0.8.2", features = ["v4"]}

[patch.crates-io]
matrix-sdk = {"path" = "../../matrix-rust-sdk/matrix_sdk"}
