[package]
name = "testbot"
version = "0.1.0"
authors = ["Andrew Halberstadt <ahal@pm.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.64"
directories = "3.0.2"
dirs = "3.0.1"
matrix-bot = { path = ".." }
matrix-sdk = "0.5.0"
tokio = {version = "1.5.0", features = ["rt-multi-thread", "macros"]}
uuid = {version = "0.8.2", features = ["v4"]}
